# rock-paper-scissor-PYTHON

./: .gitignore  main.py  pedra papel tesoura.spec  pyproject.toml
functions/: index.py
src/: curses.py  cursesAssets.py
src/functions/: index.py
