[project]
name = "pedra-papel-tesoura"
version = "0.1.0"
description = ""
authors = [
    {name = "Ruan Fabricio",email = "victor.ruanfab@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "windows-curses (>=2.4.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"

[tool.poetry.scripts]
start="main:main"